@@ -2,13 +2,12 @@ package spacewars.model.menu;
 
 import spacewars.model.Position;
 
-import java.util.Arrays;
 import java.util.List;
 
-public class CreditsMenu extends Menu{
-    private String[] names;
-    private String title;
-    private String details;
+public class CreditsMenu extends Menu {
+    private final String[] names;
+    private final String title;
+    private final String details;
 
     public CreditsMenu() {
         title = "CREDITS";
@@ -22,32 +21,20 @@ public class CreditsMenu extends Menu{
 
     @Override
     protected List<Entry> createEntries() {
-        Position pos = new Position(130,154);
+        Position pos = new Position(130, 154);
         Entry goBack = new Entry(pos, Entry.TYPE.RETURN_TO_MENU);
-        return Arrays.asList(goBack);
+        return List.of(goBack);
     }
 
     public String[] getNames() {
         return names;
     }
 
-    public void setNames(String[] names) {
-        this.names = names;
-    }
-
     public String getTitle() {
         return title;
     }
 
-    public void setTitle(String title) {
-        this.title = title;
-    }
-
     public String getDetails() {
         return details;
-    }
-
-    public void setDetails(String details) {
-        this.details = details;
     }
 }
